--- a/tex/results.tex
+++ b/tex/results.tex
@@ -192,6 +192,7 @@ At the end of our experiment, no dominant genotypes evolved in PLASTIC or STATIC
 %The minimal instances of \code{poison} execution in dominant organisms is expected given that each execution is a 10\% reduction in metabolic rate.
 The \code{poison} execution in dominant organisms is expected to be kept minimal given that each execution is a 10\% reduction in metabolic rate.
 
+\input{tex/figures/poison-accumulation-panel}
 
 % - total offspring with increases -
 Figure [x] shows the [prevalence of poison instructions in final dominant genotypes and along dominant linages] for all treatments.
@@ -203,7 +204,7 @@ These significance patterns do not qualitatively change when normalized by numbe
 % -- When/where does hitchhiking take place? --
 Next, we examined the frequency that mutations that increase \code{poison} execution co-occur with mutations that change the base task profile of offspring along dominant lineages across treatments.
 Across all NON-PLASTIC dominant lineages, we found that approximately 49\% (956 out of 1916) mutations that increased \code{poison} execution co-occurred with mutations that changed the base task profile; we observed zero instances of co-occurrence in PLASTIC and STATIC lineages.
-Additionally, we did not find evidence that mutations that increased \code{poison} execution occurred as cryptic variation in PLASTIC lineages.
+Additionally, we did not find compelling evidence that mutations that increased \code{poison} execution occurred as cryptic variation in PLASTIC lineages [supplement].
 
 
 
