--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -450,3 +450,82 @@ In this way, we can reward or punish particular phenotypic traits.
 % Indeed, phenotypic plasticity stabilized populations against environmental fluctuations, allowing lineages to more easily retain novel adaptive traits.
 
 % Plastic populations relied on environmentally-induced phenotypic changes to adapt to environmental changes, whereas non-plastic populations engaged in adaptive evolutionary tracking \cite{simons_modes_2011}[other cite?]; that is, non-plastic populations relied on \textit{de novo} mutations to continuously re-adapt to environmental changes, driving more frequent selective sweeps.
+
+% several contributing factors: length of period between switches, genetic machinery for plasticity in Avida => small scale regulation, looked retrospectively at successful lineages; if accumulation did not reach high frequencies, quickly outcompeted
+% we suspect this is due to the nature of regulation in our system.
+% way that regulation is implemented by genomes =>  
+% functionality is not modular often very integrated
+% that is, not much physical space on the genome being regulated
+% [Buffering effect: Rate of selective sweeps; plastic populations had sweeps slower than changes, which allowed unexpressed variation to be selected against before having a chance to sweep population]
+
+
+% When do we expect to see hitchhiking?
+% In our first two experiments, we found that non-plastic populations of digital organisms accumulated more mutations and more frequently lost newly acquired adaptive traits than plastic populations in our experimental system.
+% These two results motivated us to directly evaluate the propensity for deleterious hitchhiking in plastic and non-plastic populations evolving in a fluctuating environment. 
+%[Genetic hitchhiking is X].
+% [Barton 2000]
+% - if polymorphishisms fluctuate in frequency, then fluctuating selection could be the main cause of hitchhiking 
+% [Maynard Smith 1990]
+% [Reasons why unclear what treatment might have increased rates of hitchhiking. Plastic populations could accumulate unexpressed hitchhiking instructions, non-plastic populations have more frequent selective sweeps, providing more opportunities for hitchhiking].
+
+% We found that adaptive phenotypic plasticity can reduce a population's susceptibility to deleterious genetic hitchhiking by buffering the population against repeated environmental fluctuations.
+% [Power of digital evolution: unique because instruction is explicitly deleterious and is selected against, so incorporation into successful lineages is due to hitchhiking].
+% [Indeed, we observed that mutations in non-plastic lineages evolved in fluctuating environment that caused increase in execution of deleterious instructions co-occured with mutations that also changed base tasks].
+% TODO - can we pull deleterious changes vs. beneficial changes post-hoc?
+% [The strength of selection against deleterious traits mattered. Weaker selection, more hitchhiking; stronger selection, less hitchhiking.]
+% [Rate of selective sweeps; plastic populations had sweeps slower than changes, which allowed unexpressed variation to be selected against before having a chance to sweep population].
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Misc. thoughts/points (across subsections)
+% - What makes our contributions novel/unique?
+%   - This work is important because we directly manipulate the capacity for phenotypic plasticity, keeping all other conditions consistent. 
+%   - Unlike lab/field/numerical, our experiment directly manipulating the capacity for phenotypic plasticity in digital organisms, 
+% -- non-plastic perspective -
+% - rose's fluctuating environment paper(s)
+% - novel traits do not affect sensor readings
+%   - environment changes do not induce phenotypic changes 
+
+% West-eberhard on genetic accommodation: (1) a mutation or environmental change triggers the expression of a novel, heritable phenotypic variant, (2) the initially rare variant phenotype starts to spread (in the case of an environmentally induced change, due to the consistent recurrence of the environmental factor), creating a subpopulation expressing the novel trait, and (3) selection on existing genetic variation for the regulation or form of the trait causes it to become (a) genetically fixed or to remain (b) phenotypically plastic
+
+% founded with organisms from phase one
+%Each experiment is divided into two phases: in phase one, we precondition populations under conditions where plasticity is favored, plasticity is disallowed, and where plasticity is not relevant (i.e., a static environment).
+
+% TODO - add something here about landscape data? architecture data?
+% Indeed, we observed that the evolutionary dynamics of adaptively plastic populations more closely resemble the dynamics of non-plastic populations evolving in static environmental conditions than non-plastic populations evolving in fluctuating environments.
+
+
+% @AML: I'm not sure this fits - [In a very different context, \cite{zaman_coevolution_2014} found that the constantly changing environment that results from host-parasite coevolution resulted in improved fitness landscape exploration in the (non-plastic) host population (i.e., the evolution of more complex traits).] 
+
+% As such, in non-plastic populations, if the loss of a novel trait (via mutation) co-occurred with a mutation that improved fitness after the environment changes, then the loss of the novel trait was likely to hitchhike to fixation.
+%loss of the novel trait is because of the relative values of base and novel tasks.]
+
+% We hypothesize that a similar study investigating extinction risk rather than novel resource exploitation would 
+
+
+
+
+
+
+% - most broad => use digital evolution! -
+% bridge gap between natural experimental systems (in lab and in field) and mathematical modeling
+% Digital evolution bridges the empirical gap between 
+% [digital evolution to test hypotheses about consequences of phenotypic plasticity].
+
+% % - Asexual reproduction -
+% We also limited our experiments to asexually reproducing digital organisms with no mechanism for horizontal gene transfer. 
+% Horizontal gene transfer 
+% [limitation: asexual reproduction]
+% [relevance to accumulation of deleterious alleles => hgt allows decoupling, purging of delterious alleles].
+% [horizontal gene transmission can decouple mutations, might expect to observe fewer loss of novel traits in non-plastic populations because co-occurrence does not doom genes that encode for novel traits].
+% [work in mention to Rose's HGT results].
+% [see if hgt reduces effect of trait loss in non-plastic populations]
+
+%%%%%%%%%%%%%% 
+% From Levis and Pfennig:
+% "A chief difficulty with demonstrating plasticity-first evolution in natural popu- lations is that, once a trait has evolved, its evolution cannot be studied in situ. To get around this difficulty, research- ers can study extant lineages that act as ancestral-proxies to the lineage pos- sessing the focal trait"
+% - Digital evolution would be great to test plasticity-first hypotheses!
+%%%%%%%%%%%%%% 
+
+Under some circumstances, phenotypic plasticity can serve as cache of hidden genetic variation that, when revealed to selection, will result in a rapid evolutionary response (e.g., genetic accommodation if the variation is adaptive).
+[However, our results... For rapid cycling environments where the magnitude of changes are consistent, our results indicate that we should not necessarily assume accumulation of cryptic variation in plastic responses.]
